# limitless-arithmetic

./: CMakeLists.txt  limitlessint.cpp  limitlessint.hpp  main.cpp
test-catch/: CMakeLists.txt  limitlessint-test.cpp
